# agaoglu

./: .gitignore  CHANGELOG.md  README.md  angular.json  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  tailwind.config.js
.claude/: settings.json
.github/workflows/: android-build.yml
memory/: DONE.md  SETUP.md  TODO.md
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: tr-TR.wxl
src/app/: app.config.ts  app.routes.ts  app.spec.ts
src/app/core/error/: global-error-handler.ts
src/app/core/firebase/: firestore.service.ts
src/app/core/logging/: logger.service.ts
src/app/core/offline/: network.service.ts
src/app/features/auth/: auth.routes.ts
src/app/features/credit/: credit.routes.ts
src/app/features/customers/: customers.routes.ts
src/app/features/dashboard/: dashboard.page.ts
src/app/features/expenses/: expenses.page.ts  expenses.routes.ts
src/app/features/pos/: pos.page.ts
src/app/features/products/: products.routes.ts
src/app/features/reports/: reports.routes.ts
src/app/features/settings/: settings.routes.ts
src/app/layout/main-layout/: main-layout.component.ts
src/app/layout/sidebar/: sidebar.component.ts  sidebar.service.ts
src/app/shared/directives/: barcode-input.directive.ts
src/app/shared/models/: credit.model.ts  customer.model.ts  expense.model.ts  product.model.ts  sale.model.ts  user.model.ts
src/environments/: environment.prod.ts  environment.ts
(+31 files in other folders)
