[package]
name = "tarim-market"
version = "1.0.0"
description = "Tarım Market Pro - Stok ve Satış Yönetimi"
authors = ["Furkan Orhan"]
edition = "2021"

[lib]
name = "tarim_market_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tarim-market"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
